# apple_releases

./: Cargo.toml  README.md  justfile
.run/: Run.run.xml  Test.run.xml
src/: article.rs  cli.rs  main.rs  parse.rs  product.rs  selectors.rs  software_release.rs  url.rs
