[package]
name = "apple_releases"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = "4.0.27"
lazy_static = "1.4.0"
lenient_semver = "0.4.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.13.0"
semver = "1.0.14"
url = "2.3.1"
